Adds UserRole entity and modifies naming conventions. Application successfully able to make requests with authentication